# cryptos-server

./: CMakeLists.txt  README.md  database.c  database.h  functions.c  functions.h  main.c
